# phel_cli

./: README.md  main.py  pyproject.toml  test.py
pwsh/: Get-EnvPath.ps1
